ecmascript/parser/tests/test262-error-references/fail/85ee036d67974729.js.stderr
error: Unexpected token `:`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/85ee036d67974729.js:1:8
  |
1 | ({get +:3})
  |        ^

error: Expression expected
 --> $DIR/tests/test262-parser/fail/85ee036d67974729.js:1:7
  |
1 | ({get +:3})
  |       ^

